--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "ghpages": "^0.0.10",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
